# OpenCL-Mandelbrot-fractal

./: .gitmodules  CMakeLists.txt  README.md  kernel.cpp  test.cpp
